@@ -1,6 +1,7 @@
 hildon-application-manager (1:2.1.13~unreleased) unstable; urgency=low
 
   * Fixes: NB#85962, NB#80933, NB#76679, NB#86181, NB#86094, NB#86066.
+  * Fixes: NB#85947.
   * Remove init links explicitly so that they get recreated with their new
     parameters.  Fixes: NB#85769.
 
